<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/pet_profile_scroll_view"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/full_pet_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/full_pet_info_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/pet_name"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/full_pet_info_gender"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                app:srcCompat="@drawable/male" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/pet_type"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/full_pet_info_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/pet_type_dog"
            android:textSize="25dp" />

        <View style="@style/Divider.Horizontal.Long" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/pet_breed"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/full_pet_info_breed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/pet_breed_husky"
            android:textSize="25dp" />


        <View style="@style/Divider.Horizontal.Long" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/pet_age"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/full_pet_info_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/pet_age_1_year"
            android:textSize="25dp" />

        <View style="@style/Divider.Horizontal.Long" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/purpose"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/full_pet_info_purpose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/purpose_friendship"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/full_pet_info_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:paddingTop="10dp"
            android:paddingBottom="15dp"
            android:text="@string/pet_info_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:paddingBottom="15dp"
            android:text="Информация о владельце"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/full_pet_info_owner_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="15dp"
                android:scaleType="centerCrop"
                android:src="@drawable/cat" />

            <TextView
                android:id="@+id/full_pet_info_owner_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:gravity="left|center"
                android:fontFamily="sans-serif"
                android:text="David Miller" />
        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>