<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/notification_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="30dp"
    app:cardForegroundColor="#00FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EDEAEA"
        android:orientation="vertical">

        <!-- Media -->

        <TextView
            android:id="@+id/notification_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="10sp"
            android:text="Title"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <TextView
            android:id="@+id/notification_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10sp"
            android:text="Text of notification"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary" />

        <LinearLayout
            android:id="@+id/btns_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/deny_btn"
                android:layout_width="120dp"
                android:layout_height="37dp"
                android:layout_marginLeft="45sp"
                android:backgroundTint="#FF5722"
                android:text="Отказать"
                android:textSize="10sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/accept_btn"
                android:layout_width="120dp"
                android:layout_height="37dp"
                android:layout_marginLeft="45sp"
                android:backgroundTint="#8BC34A"
                android:text="Прочитано"
                android:textSize="10sp" />
        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
