<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/notification"
        android:icon="@drawable/baseline_notifications_24"
        android:title="@string/notification_hint"
        android:contentDescription="@string/notification_hint"
        app:showAsAction="always" />
</menu>
